Dummy_Package_for_scratch_org/main/default/objects/Git_Commit__c/Git_Commit__c.object-meta.xml
<CustomObject>
    <label>Git Commit</label>
    <nameField>
        <displayFormat>Commit-{0000}</displayFormat>
        <label>Git Commit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Git Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>