Dummy_Package_for_scratch_org/main/default/objects/Git_Commit__c/fields/Changes__c.field-meta.xml
<CustomField>
    <fullName>Changes__c</fullName>
    <label>Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>