Dummy_Package_for_scratch_org/main/default/objects/Git_Commit__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>