Dummy_Package_for_scratch_org/main/default/objects/Git_Commit__c/fields/Commit_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Commit_Datetime__c</fullName>
    <label>Commit Datetime</label>
    <type>DateTime</type>
</CustomField>